# ARAM

./: AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md  _a_r_a_m_exception_8hpp.html  _a_r_a_m_exception_8hpp_source.html  _adaptive_thresh_detector_8hpp.html  _adaptive_thresh_detector_8hpp_source.html  _aruco_tag_8hpp.html  _aruco_tag_8hpp_source.html  _auto_canny_detector_8hpp.html  _auto_canny_detector_8hpp_source.html  _binary_tree_8hpp.html  _binary_tree_8hpp_source.html  _binary_tree_tag_matcher_8hpp.html  _binary_tree_tag_matcher_8hpp_source.html  _canny_8hpp.html  _canny_8hpp_source.html  _canny_fitting_detector_8hpp.html  _canny_fitting_detector_8hpp_source.html  _chart_8hpp.html  _chart_8hpp_source.html  _chessboard_8hpp.html  _chessboard_8hpp_source.html  _edge_detector_8hpp.html  _edge_detector_8hpp_source.html  _error_chart_8hpp_source.html  _exporter_8hpp.html  _exporter_8hpp_source.html  _extrinsic_8hpp.html  _extrinsic_8hpp_source.html  _extrinsics_8hpp.html  _extrinsics_8hpp_source.html  _frame_capture_8hpp.html  _frame_capture_8hpp_source.html  _frame_set_8hpp.html  _frame_set_8hpp_source.html  _gray_scale_8hpp.html  _gray_scale_8hpp_source.html  (+207 more)
cmake/: FindARAM.cmake
include/ARAM/: ARAMException.hpp  FrameSet.hpp  TagDetector.hpp  export.hpp  typedef.hpp
include/ARAM/ROIDetector/: AdaptiveThreshDetector.hpp  AutoCannyDetector.hpp  CannyFittingDetector.hpp  EdgeDetector.hpp  IROIDetector.hpp  LineFitting.hpp  OtsuCannyFittingDetector.hpp  ROI.hpp
include/ARAM/coordinate/: Chessboard.hpp  ICoordinate.hpp  MultiTag.hpp
include/ARAM/tag/: BinaryTreeTagMatcher.hpp  HammingTag.hpp  HammingTagMatcher.hpp  HarrisCornerTag.hpp  HarrisCornerTagMatcher.hpp  ITag.hpp  ITagMatcher.hpp  LocalThreshTag.hpp  LocalThreshTagMatcher.hpp  OtsuTagMatcher.hpp  StandardTag.hpp
include/ARAM/tools/: BinaryTree.hpp  (+10 more)
samples/: camera_data.xml
samples/FirstApp/: CMakeLists.txt
samples/FirstApp/src/: FirstApp.cpp
samples/MultiTracking/: CMakeLists.txt
samples/MultiTracking/src/: MultiTracking.cpp
samples/TrackingOpenGL/: CMakeLists.txt
samples/TrackingOpenGL/src/: main.cpp
samples/capture/: multiTracking.avi
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+38 more)
src/: ARAMException.cpp  FrameSet.cpp  TagDetector.cpp
src/ROIDetector/: AdaptiveThreshDetector.cpp  AutoCannyDetector.cpp  CannyFittingDetector.cpp  EdgeDetector.cpp  IROIDetector.cpp  LineFitting.cpp  OtsuCannyFittingDetector.cpp  ROI.cpp
src/coordinate/: Chessboard.cpp  ICoordinate.cpp  MultiTag.cpp
src/tag/: BinaryTreeTagMatcher.cpp  HammingTag.cpp  HammingTagMatcher.cpp  HarrisCornerTag.cpp  HarrisCornerTagMatcher.cpp  HarrisCornerTagMatcher.cpp.autosave  ITag.cpp  ITagMatcher.cpp  LocalThreshTag.cpp  LocalThreshTagMatcher.cpp  LocalThreshTagMatcher.cpp.autosave  OtsuTagMatcher.cpp  OtsuTagMatcher.cpp.autosave  StandardTag.cpp
src/tools/: BinaryTree.cpp  Exporter.cpp  Extrinsic.cpp  Extrinsics.cpp  Grid.cpp  Intrinsic.cpp  Intrinsics.cpp  MilgramContourClosing.cpp  NaiveContourClosing.cpp  TagDictionnary.cpp  contourClosing.cpp
tag/: dictionnary.mark  generatedMarker.xml
tools/MarkerGenerator/: CMakeLists.txt  README.txt
tools/MarkerGenerator/include/: TagGenerator.hpp
tools/MarkerGenerator/src/: TagGenerator.cpp  main.cpp
